# csci-567-project

./: .gitignore  README.md  code.ipynb  correlation.csv  correlation_coeff_pca.ipynb  final.csv  mapping.pickle  output.csv  pyproject.toml  test.ipynb  utils.py
results/: results.csv  results.numbers
