[tool.poetry]
name = "567-project"
version = "0.1.0"
description = "Code for CSCI 567 Project"
authors = ["Omkar Masur <44014415+oam-mit@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "567_project"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.1"
torchvision = "^0.17.1"
torchaudio = "^2.2.1"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
